--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is seco jiang."
-header-img: "img/home-bg-o.jpg"
+header-img: "img/post-bg-head.jpg"
 ---
 
 <!-- Language Selector -->
