--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-head.jpg"
     <blockquote><p>那时我们正年少，<br>
     我爱谈天你爱笑。</p></blockquote>
     
-    <p>Hey，我是<strong>林莲(seco)</strong>，一只程序喵，educating</p>
+    <p>Hey，我是<strong>林莲(seco)</strong>，一只程序喵，educating.</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。</p>
 
